--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,14 @@
       <version>6.2.4.Final</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.4.2</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
